XWIKI-18039: "Jump to Page" feature doesn't propose WebHome page after dot is typed * Make sure the CSS required by the page picker is (lazy) loaded (when the Jump to Page modal is opened for the first time). * Remove unsed CSS (the jump to page feature is not listed in Quick Links panel anymore but in the Tips panel) * Deprecate translation keys that are not needed anymore.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/widgets/jumpToPage.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/widgets/jumpToPage.css
@@ -11,13 +11,7 @@
   padding: 1px 2px;
 }
 
-/* The "Jump to any page..." text inserted in the QuickLinks panel */
-.jmp-activator {
-  cursor: pointer;
-  font-size: 80%;
-  font-weight: 900;
-}
-
-.jmp-activator:hover {
-  text-decoration: underline;
+.jump-dialog-container {
+  /* Reduce the z-index a bit in order to not have the page picker drop down behind the modal backdrop. */
+  z-index: 999;
 }
